# droidcli

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build_and_distribute.bat  build_and_run.bat  droidcli.code-workspace  droidcli.cpp  droidcli.h  droidcli_core.cpp  droidcli_core.h  metaagent.code-workspace  metaagent.cpp  metaagent.h
app/: CMakeLists.txt
app/public/: app.js  index.html  style.css
app/scripts/: png_to_ico.ps1
app/src/: main.cpp  media_dataset_mirror.cpp  media_dataset_mirror.hpp  metaagent_host.cpp  metaagent_host.hpp  metaagent_http_mount.cpp  process_manager.cpp
app/windows/: app_icon.rc.in
cli/: app_index.cpp  app_index.hpp  clipboard.cpp  clipboard.hpp  command_runner.cpp  command_runner.hpp  droidcli.cpp  ffmpeg_tool.cpp  ffmpeg_tool.hpp  filesystem_tools.cpp  filesystem_tools.hpp  hardware_info.cpp  hardware_info.hpp  host.cpp  host.hpp  http_mount.cpp  http_mount.hpp  memory_store.cpp  memory_store.hpp  os_registry.cpp  os_registry.hpp  process_manager.cpp  process_manager.hpp  settings_store.cpp  settings_store.hpp  system_info.cpp  system_info.hpp  tui.cpp  tui.hpp  window_list.cpp  window_list.hpp  windows_locations.cpp  windows_locations.hpp  windows_service.cpp  windows_service.hpp
cmake/: FFmpeg.cmake
config/: connectors.example.json
db/: README.md
distribute/: README_DIST.txt  run_all.bat
logs/: README.md
src/: export.hpp  initialize.cpp  initialize.hpp  version.hpp
src/ai/: anthropic_client.cpp  anthropic_client.hpp  language_runtime.cpp  language_runtime.hpp  model_provider.cpp  model_provider.hpp  ollama_client.cpp  ollama_client.hpp  openai_compat_client.cpp  openai_compat_client.hpp  types.cpp  types.hpp
src/app/: commands.cpp  commands.hpp  gui_actions.cpp  gui_actions.hpp  gui_catalog.cpp  gui_catalog.hpp  runtime_catalog.cpp  runtime_catalog.hpp  tasks.cpp  tasks.hpp
src/camera/: controller.cpp  controller.hpp  rig.cpp  rig.hpp  types.cpp  types.hpp
src/classify/: response_templates.cpp  response_templates.hpp  turn_decision.cpp  turn_decision.hpp
src/core/: log_sink.cpp  log_sink.hpp  math.cpp  math.hpp  spawn.cpp  spawn.hpp  types.cpp  types.hpp
src/input/: policy.cpp  policy.hpp
src/intent/: create_file_intent.cpp  create_file_intent.hpp  create_image_intent.cpp  create_image_intent.hpp  open_intent.cpp  open_intent.hpp  pending_command.cpp  pending_command.hpp  phrase_strip.cpp  phrase_strip.hpp
src/media/: corpus.cpp  corpus.hpp  decode.cpp  decode.hpp  image.hpp  mask_cache.cpp  mask_cache.hpp  pipeline.cpp  pipeline.hpp  probe.cpp  probe.hpp  store.cpp  store.hpp
src/net/: connector.cpp  connector.hpp  google_search.cpp  google_search.hpp  handlers.cpp  handlers.hpp  json.cpp  json.hpp  platform_client.cpp  platform_client.hpp  router.cpp  router.hpp  signal_router.cpp  signal_router.hpp  signal_types.cpp  signal_types.hpp  types.hpp
src/notify/: parse.cpp  parse.hpp  types.hpp
src/particle/: actuation_math.cpp  actuation_math.hpp  effect_catalog.cpp  effect_catalog.hpp  forming_solver.cpp  forming_solver.hpp  forming_types.cpp  forming_types.hpp  image_mask_processor.cpp  image_mask_processor.hpp  pattern_types.cpp  pattern_types.hpp  representation_actuation.cpp  representation_actuation.hpp  representation_types.cpp  representation_types.hpp  return_types.cpp  return_types.hpp  scheduler.cpp  scheduler.hpp  shape_builder.cpp  shape_builder.hpp  shape_types.cpp  shape_types.hpp  state_effects.cpp  state_effects.hpp  transition_graph.cpp  transition_graph.hpp  visual_continuity.cpp  visual_continuity.hpp
src/reliability/: claim_guards.cpp  claim_guards.hpp  command_guards.cpp  command_guards.hpp  path_guards.cpp  path_guards.hpp
src/runtime/: host_interfaces.cpp  host_interfaces.hpp
src/session/: status.cpp  status.hpp  types.hpp
tests/: actuation_composer_test.cpp  anthropic_client_test.cpp  app_command_test.cpp  claim_guards_test.cpp  command_guards_test.cpp  connector_test.cpp  corpus_test.cpp  create_file_intent_test.cpp  create_image_intent_test.cpp  forming_types_test.cpp  google_search_test.cpp  host_interfaces_test.cpp  intent_test.cpp  language_runtime_test.cpp  media_decode_test.cpp  model_provider_test.cpp  net_handler_test.cpp  ollama_client_test.cpp  openai_compat_client_test.cpp  path_guards_test.cpp  pending_command_test.cpp  response_templates_test.cpp  runtime_catalog_test.cpp  shape_builder_polyline_test.cpp  signal_router_test.cpp  spawn_test.cpp  task_queue_test.cpp  transition_graph_test.cpp  turn_decision_test.cpp
tools/: metaagent_server.cpp  mini_http_server.cpp  mini_http_server.hpp  sync_http_client.cpp  sync_http_client.hpp
